<resources>
    <string name="app_name">BNCTL Mobile Banking</string>
    <string name="app_code">mobileBanking</string>
    <string name="toast_message_copied_to_clipboard">Copied to clipboard</string>
    <string name="nav_dashboard">Accounts</string>
    <string name="nav_transfers">Transfers</string>
    <string name="nav_cards">Cards</string>
    <string name="nav_services">Services</string>
    <string name="nav_information">More</string>
    <string name="intro_title">Intro</string>
    <string name="intro_steps">1. Terms &amp; Conditions\n2. Log in with Internet Banking Credentials\n3. Phone number verification</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="terms_text">
        <b>1. Objective:</b>\n\n
        Provide guidelines regarding information management services for electronic transaction data in the form of Internet Banking and Mobile Banking.\n\n
        <b>2. Main Guide:</b>\n\n
        Mobile Banking usually abbreviated as m-Banking, is a transaction banking through mobile media is good in the form of an m-Banking application or mobile operator default application.\n\n
        <b>3. Terms and Conditions</b>\n\n
        \t • After registering, customers can use the BNCTL bank\'s internet banking service to obtain information or make transactions.\n\n
        \t • Registered customers will receive a notification link along with a default "username and password" via the newly registered user\'s email.\n\n
        \t • When logging in for the first time to use the BNCTL bank internet banking service, the customer is required to change the default "username and password" received from a notification via the customer\'s email. After that, please change the “username and password” as specified by the customer.\n\n
        \t • Change the password with a character length “password” must be 8 digits and must be a combination of uppercase and lowercase letters, numbers and symbols (!@#%^&amp;*). Password example: @chapie #21.\n\n
        \t • For each transaction:\n\n
            \t\t - The customer must ensure the accuracy and completeness of transaction orders (including ensuring that all data required for transactions has been filled in completely and correctly). The Bank is not responsible for any impacts that may arise due to negligence, incompleteness, ambiguity or inaccuracy of orders/data from user customers.\n\n
            \t\t - If it is believed that the correctness and completeness of the data filled in, as a sign of approval for the implementation of the transaction, the customer user will receive an OTP (One-time password) notification via SMS to the customer\'s mobile number that was previously registered.\n\n
        \t • All transactions that have been notified by the bank and approved by the customer cannot be cancelled.\n\n
        \t • The Bank accepts and executes every order from the customer as a valid order based on the use of "username and password" and OTP notifications received by customers via SMS or email. And for this reason, the bank has no obligation to examine or investigate the authenticity or legitimacy or authority of the user "username and password" and OTP notifications or evaluate or prove the accuracy or completeness of orders. Therefore, the order is valid and binding on the customer as appropriate, unless the customer can prove otherwise.\n\n
        \t • Bank has the right not to carry out orders from user customers, if:\n\n
            \t\t - Insufficient bank account balance.\n
            \t\t - The intended beneficiary customer account number is no longer active (closed account).\n
            \t\t - The Bank knows or has reason to suspect that fraud or a crime has been or will be committed.\n
            \t\t - The bank legally knows that the user customer has a legal problem.\n\n
        \t • The customer agrees and acknowledges that:\n\n
            \t\t - By conducting transactions through the internet banking and mobile banking of the BNCTL bank, all instructions and communications from customers received by the bank will be treated as valid evidence even if written documents are not made and/or documents that are not signed are issued.\n\n
            \t\t - Evidence of orders from the customer to the bank and all forms of communication between the bank and the customer sent electronically stored in the bank\'s data center or stored in the form of information storage and other data at the bank, either in written form documents, notes, computer printouts or copies thereof , is a legal means of evidence whose validity, truth or authenticity cannot be denied.\n\n
        \t • The use of username, password and OTP by the customer has the same legal force as a written order signed by the user customer, therefore the user customer hereby declares that the username, password and OTP user, in every internet banking transaction order and mobile banking are also a power of attorney from a customer who uses the bank to carry out transactions including but not limited to debiting the customer\'s account either in the context of carrying out the ordered transaction or for payment of transaction fees that have been or will be determined later by the Bank. bank.\n\n
        \t • At the bank\'s own discretion, the bank has the right to change the transaction limit.\n\n
        <b>4. Privacy and Security</b>\n\n
        \t • Banks and customers are not obliged to carry out any orders whether signed or not or to answer any questions received by unsecured e-mail. Customers are advised not to send confidential information via unsecured e-mails.\n\n
        \t • The bank has the right to stop BNCTL internet banking and mobile banking services temporarily or for a certain period determined by the bank for renewal, maintenance or other purposes for any reason that the bank deems good, and for that the bank is not obliged to account for it to anyone.\n\n
        \t • Do not use public Wi-fi connections when accessing internet banking and mobile banking applications, this is because wi-fi connections in public areas are not guaranteed security. In fact, it can make the data in it vulnerable to being hacked by intruders.\n\n
        \t • Always update the mobile banking application installed on the smartphone to ensure that the application is equipped with the latest security services.\n\n
        \t • Make sure to download the BNCTL mobile banking application only through official sources in the play store (for android based gadgets) and the app store (for iOS based gadgets) and not from unknown sources obtained from untrusted sources.\n\n
        \t • Username, Password and OTP are confidential codes and the authority to use them rests with the user customer. Username is permanent and cannot be changed again.\n\n
        \t • User customers must secure their username, password and OTP by:\n\n
            \t\t - Do not share your username, password and OTP to other people.\n
            \t\t - Do not record the username, password and OTP on paper or store it in writing on a cellphone or other storage facility that can be known by other people.\n
            \t\t - Be careful using your username, password and OTP so that others don\'t see it.\n
            \t\t - Change internet banking password regularly, at least once every three months.\n
            \t\t - Do not use passwords that are easy to guess, such as:\n
            \t\t - Twin / repeating numbers (11111111, 11223344, 10101010, and so on).\n
            \t\t - Use the date of birth of you or your significant other.\n
            \t\t - Make your Internet Banking password different from the pin you use in other apps.\n\n
        \t • In the event that the Customer knows or suspects that the Username, Password and OTP have been known by an unauthorized person, the User Customer must immediately take security measures by changing the Username and Password.\n\n
        \t • If for some reason the user customer cannot change his internet banking and mobile banking username and password, then the customer must notify the BNCTL bank. Prior to receipt of written notification by the authorized bank, all orders, transactions and communications based on the customer\'s username, password and OTP by unauthorized parties are the full responsibility of the customer user.\n\n
        \t • Any misuse of internet banking usernames, passwords and OTPs and BNCTL mobile banking is the responsibility of the customer. The Customer hereby releases the Bank from all claims that may arise, both from other parties and the User Customer himself as a result of misuse of Username, Password and OTP.
    </string>
    <string name="terms_button_agree">I agree</string>
    <string name="login_title_logo">Banco Nacional de Comércio de Timor Leste </string>
    <string name="login_title">Use your Internet Banking credentials</string>
    <string name="login_label_info">Use your Internet Banking credentials as an individual customer.</string>
    <string name="login_placeholder_email">Email</string>
    <string name="login_placeholder_username">Username</string>
    <string name="login_placeholder_password">Password</string>
    <string name="login_button_sign_in_or_register">Sign in or register</string>
    <string name="login_button_sign_in">Log in</string>
    <string name="login_dialog_label_logging_you_in">Logging you in, please wait</string>
    <string name="login_label_forgot_password">Forgot password?</string>
    <string name="login_label_contacts">Contacts</string>
    <string name="login_label_branches">Branches</string>
    <string name="login_label_button_info">Info</string>
    <string name="login_label_title_dialog_forgoten_password">Please visit а Bank branch</string>
    <string name="login_label_text_forgoten_password">You have to go to a branch of the bank to change your password.</string>
    <string name="login_label_button_forgoten_password">OK</string>
    <string name="login_confirm_label">Confirm your login</string>
    <string name="login_confirm_message">Use your SmartID application to authorize the login.</string>
    <string name="notifications_title">Notifications</string>
    <string name="cards_title">Cards</string>
    <string name="services_title">Services</string>
    <string name="dashboard_title_accounts">Accounts</string>
    <string name="dashboard_title_cards">Cards</string>
    <string name="dashboard_accounts_label_balance">Balance:</string>
    <string name="transfers_title">Transfers</string>
    <string name="transfers_button_between_accounts">Between my accounts</string>
    <string name="transfers_button_national">National transfer</string>
    <string name="transfers_button_internal">Internal transfer</string>
    <string name="transfers_button_pending">Pending transfers</string>
    <string name="transfers_button_history">Outbound transfers</string>
    <string name="transfer_form_placeholder_beneficiary_name">Payee Name</string>
    <string name="transfer_form_placeholder_account_number">Account Number</string>
    <string name="offices_and_atms_title">Offices and ATMs</string>
    <string name="services_offices_button">Offices</string>
    <string name="services_atms_button">ATMs</string>
    <string name="common_button_next">Next</string>
    <string name="fallback_use_sms_button">Use SMS</string>
    <string name="fallback_error_confirming_action_use_sms">There is no connection to SmartID. You can use SMS code instead.</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_label_currency">Currency</string>
    <string name="transfer_form_placeholder_payee_email">Payee E-Mail</string>
    <string name="template_details_label_transferType">Transfer Type</string>
    <string name="template_label_payee_currency">Payee Currency</string>
    <string name="edit_payee_title">Edit Payee</string>
    <string name="transfers_button_transfer_to_payee">Transfer to payee</string>
</resources>