<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_graph_dashboard"
        android:icon="@drawable/nav_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_graph_transfers"
        android:icon="@drawable/nav_transfers"
        android:title="@string/nav_transfers" />
    <!--    <item
            android:id="@+id/nav_graph_cards"
            android:icon="@drawable/nav_cards"
            android:title="@string/nav_cards" />-->
    <!--
        <item
            android:id="@+id/nav_graph_services"
            android:icon="@drawable/nav_services"
            android:title="@string/nav_services" />
    -->

    <item
        android:id="@+id/nav_graph_information"
        android:icon="@drawable/nav_information"
        android:title="@string/nav_information" />
</menu>