<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/fragment_intro_title"
        style="@style/text_title_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_views_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_views_margin_vertical"
        android:layout_marginBottom="@dimen/fragment_views_margin_bottom"
        android:text="@string/intro_title" />

    <TextView
        android:id="@+id/fragment_intro_text"
        style="@style/text_info_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/fragment_views_margin_horizontal"
        android:layout_marginBottom="@dimen/fragment_views_margin_bottom"
        android:layout_weight="1"
        android:text="@string/intro_steps" />

    <Button
        android:id="@+id/fragment_intro_btn_next"
        style="@style/bottom_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_views_margin_vertical"
        android:text="@string/common_button_next" />

</LinearLayout>