<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/fragment_background"
  android:orientation="vertical">
  <androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <TextView
      style="@style/toolbar_title"
      android:text="@string/transfers_title" />

  </androidx.appcompat.widget.Toolbar>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/fragment_padding"
      android:clipChildren="false"
      android:clipToPadding="false"
      android:orientation="vertical">

      <androidx.cardview.widget.CardView
        style="@style/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.banking.fragments.transfers.TransfersFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/transfers_options"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:focusable="true"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <Button
            android:id="@+id/transfers_between_accounts_menu_item"
            style="@style/fragment_list_item.with_arrow_right"
            android:textStyle="normal"
            android:drawableLeft="@drawable/ic_transfer_betweenacc"
            android:text="@string/transfers_button_between_accounts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

          <Button
            android:id="@+id/transfers_to_national_iban_menu_item"
            style="@style/fragment_list_item.with_arrow_right"
            android:drawableLeft="@drawable/ic_transfer_interbank"
            android:text="@string/transfers_button_national"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transfers_between_accounts_menu_item"
            tools:ignore="RtlHardcoded" />

          <Button
            android:id="@+id/transfers_internal_menu_item"
            style="@style/fragment_list_item.with_arrow_right"
            android:drawableLeft="@drawable/ic_transfer_interbank"
            android:text="@string/transfers_button_internal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transfers_to_national_iban_menu_item"
            tools:ignore="RtlHardcoded" />

          <Button
            android:id="@+id/transfers_pending_menu_item"
            style="@style/fragment_list_item.with_arrow_right"
            android:drawableLeft="@drawable/ic_transfer_pending"
            android:text="@string/transfers_button_pending"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transfers_internal_menu_item"
            tools:ignore="RtlHardcoded" />

          <Button
            android:id="@+id/transfers_transfer_to_payee_menu_item"
              style="@style/fragment_list_item.with_arrow_right"
              android:drawableLeft="@drawable/ic_transfer_template"
              android:text="@string/transfers_button_transfer_to_payee"
              app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transfers_pending_menu_item"
            tools:ignore="RtlHardcoded" />

          <Button
            android:id="@+id/transfers_history_menu_item"
            style="@style/fragment_list_item.with_arrow_right"
            android:drawableLeft="@drawable/ic_transfer_history"
            android:text="@string/transfers_button_history"
            app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/transfers_transfer_to_payee_menu_item"
              tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </androidx.cardview.widget.CardView>

    </LinearLayout>

  </ScrollView>
</LinearLayout>

