<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/fragment_t_c_title"
        style="@style/text_title_onboarding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_views_margin_horizontal"
        android:layout_marginTop="@dimen/fragment_views_margin_vertical"
        android:layout_marginBottom="@dimen/fragment_views_margin_bottom"
        android:text="@string/terms_title" />

    <TextView
        android:id="@+id/fragment_t_c_text"
        style="@style/text_info_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/fragment_views_margin_horizontal"
        android:layout_marginEnd="@dimen/fragment_views_margin_horizontal"
        android:layout_marginBottom="@dimen/fragment_views_margin_bottom"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:text="@string/terms_text" />

    <Button
        android:id="@+id/fragment_t_c_btn_next"
        style="@style/bottom_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_views_margin_vertical"
        android:text="@string/common_button_next" />

</LinearLayout>